2026-03 Cumulative Update for Version 2503 (6.2.x)
With Buszy

--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -270,11 +270,19 @@
       <div class="container">
         <div class="wbnrfz-grid">
           <div class="card ds" data-date="2025-11-30">
-            <img src="https://i.imgur.com/TBlQxOJ.png" alt="buszy">
+            <img src="https://i.imgur.com/fekfd0k.png" alt="buszy">
             <div class="card-content">
               <h3>Buszy - Bus Arrival Timings</h3>
-              <a href="worksbynrfz/buszy.html" class="pw-btn-small btn-2"><i 
-                class="fa-solid fa-arrow-right"></i></a>
+              <a href="worksbynrfz/buszy.html" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+          </div>
+
+          <div class="card in" data-date="2025-01-01">
+            <img src="https://i.imgur.com/498xWqm.png" alt="tdc-v3">
+            <div class="card-content">
+              <h3>RailBuddy - Stay on track, always</h3>
+              <a href="worksbynrfz/delays-checker.html" class="pw-btn-small btn-2"><i
+                  class="fa-solid fa-arrow-right"></i></a>
             </div>
           </div>
 
@@ -282,16 +290,7 @@
             <img src="https://i.imgur.com/HaCQ71l.png" alt="eicw-brainstorm">
             <div class="card-content">
               <h3>EICW - Implementation Brainstorming</h3>
-              <a href="worksbynrfz/improve-wf.html" class="pw-btn-small btn-2"><i 
-                class="fa-solid fa-arrow-right"></i></a>
-            </div>
-          </div>
-
-          <div class="card in" data-date="2025-01-01">
-            <img src="https://i.imgur.com/Dlkjslp.png" alt="tdc-v3">
-            <div class="card-content">
-              <h3>Train Delays Tracker</h3>
-              <a href="worksbynrfz/delays-checker.html" class="pw-btn-small btn-2"><i
+              <a href="worksbynrfz/improve-wf.html" class="pw-btn-small btn-2"><i
                   class="fa-solid fa-arrow-right"></i></a>
             </div>
           </div>
@@ -300,8 +299,7 @@
             <img src="https://i.imgur.com/h91oHX9.png" alt="store-invent">
             <div class="card-content">
               <h3>Store Inventory Tracking</h3>
-              <a href="worksbynrfz/sit.html" class="pw-btn-small btn-2"><i 
-                class="fa-solid fa-arrow-right"></i></a>
+              <a href="worksbynrfz/sit.html" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
             </div>
           </div>
 
@@ -309,8 +307,7 @@
             <img src="https://i.imgur.com/Y7RzeWB.png" alt="bp12-nws">
             <div class="card-content">
               <h3>New Wayfinding System for BP12 Jelapang</h3>
-              <a href="worksbynrfz/bp12.html" class="pw-btn-small btn-2"><i 
-                class="fa-solid fa-arrow-right"></i></a>
+              <a href="worksbynrfz/bp12.html" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
             </div>
           </div>
 
@@ -318,8 +315,7 @@
             <img src="https://i.imgur.com/H41Qcdd.png" alt="bus-pids">
             <div class="card-content">
               <h3>LTA Bus PIDS Redesign</h3>
-              <a href="worksbynrfz/lta-pids.html" class="pw-btn-small btn-2"><i 
-                class="fa-solid fa-arrow-right"></i></a>
+              <a href="worksbynrfz/lta-pids.html" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
             </div>
           </div>
 
@@ -327,8 +323,7 @@
             <img src="https://i.imgur.com/IeRTJiV.png" alt="bus-stop-pole">
             <div class="card-content">
               <h3>LTA Bus Stop Pole Design Refresh</h3>
-              <a href="worksbynrfz/lta-bp.html" class="pw-btn-small btn-2"><i 
-                class="fa-solid fa-arrow-right"></i></a>
+              <a href="worksbynrfz/lta-bp.html" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
             </div>
           </div>
 
@@ -345,8 +340,7 @@
             <img src="https://i.imgur.com/NsltGte.png" alt="myts-app">
             <div class="card-content">
               <h3>MyTransport.SG App Redesign</h3>
-              <a href="worksbynrfz/myts-app.html" class="pw-btn-small btn-2"><i 
-                class="fa-solid fa-arrow-right"></i></a>
+              <a href="worksbynrfz/myts-app.html" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
             </div>
           </div>
 
@@ -354,8 +348,7 @@
             <img src="https://i.imgur.com/JAQpFxJ.png" alt="bus-rep">
             <div class="card-content">
               <h3>Bus Replications</h3>
-              <a href="worksbynrfz/bus-rep.html" class="pw-btn-small btn-2"><i 
-                class="fa-solid fa-arrow-right"></i></a>
+              <a href="worksbynrfz/bus-rep.html" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
             </div>
           </div>
 
@@ -363,8 +356,7 @@
             <img src="https://i.imgur.com/fLPs7g4.png" alt="time-tree">
             <div class="card-content">
               <h3>How To Use TimeTree Infographic</h3>
-              <a href="worksbynrfz/igra3.html" class="pw-btn-small btn-2"><i 
-                class="fa-solid fa-arrow-right"></i></a>
+              <a href="worksbynrfz/igra3.html" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
             </div>
           </div>
 
@@ -372,8 +364,7 @@
             <img src="https://i.imgur.com/VEDgOwO.png" alt="more-rep">
             <div class="card-content">
               <h3>More Replications</h3>
-              <a href="worksbynrfz/more-rep.html" class="pw-btn-small btn-2"><i 
-                class="fa-solid fa-arrow-right"></i></a>
+              <a href="worksbynrfz/more-rep.html" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
             </div>
           </div>
 
@@ -387,73 +378,70 @@
           </div>
 
           <div class="card ds mc" data-date="2023-01-01">
-              <img src="https://i.imgur.com/OOsyWrU.png" alt="mrt-sign-s2">
-              <div class="card-content">
-                <h3>MRT Signages Concept/Replications S2</h3>
-                <a href="worksbynrfz/mrt-signage-rep-s2.html" class="pw-btn-small btn-2"><i
-                    class="fa-solid fa-arrow-right"></i></a>
-              </div>
+            <img src="https://i.imgur.com/OOsyWrU.png" alt="mrt-sign-s2">
+            <div class="card-content">
+              <h3>MRT Signages Concept/Replications S2</h3>
+              <a href="worksbynrfz/mrt-signage-rep-s2.html" class="pw-btn-small btn-2"><i
+                  class="fa-solid fa-arrow-right"></i></a>
             </div>
+          </div>
 
 
           <div class="card ig" data-date="2022-01-01">
-              <img src="https://i.imgur.com/y8FkWzk.png" alt="hydration-reg">
-              <div class="card-content">
-                <h3>Hydration Regime Infographic</h3>
-                <a href="worksbynrfz/hydrationreg.html" class="pw-btn-small btn-2"><i
-                    class="fa-solid fa-arrow-right"></i></a>
-              </div>
+            <img src="https://i.imgur.com/y8FkWzk.png" alt="hydration-reg">
+            <div class="card-content">
+              <h3>Hydration Regime Infographic</h3>
+              <a href="worksbynrfz/hydrationreg.html" class="pw-btn-small btn-2"><i
+                  class="fa-solid fa-arrow-right"></i></a>
             </div>
+          </div>
 
 
           <div class="card ds" data-date="2023-01-01">
-              <img src="https://i.imgur.com/2STNFPm.png" alt="ezlink-red">
-              <div class="card-content">
-                <h3>EZ-Link Card Redesign</h3>
-                <a href="worksbynrfz/ezlink-red.html" class="pw-btn-small btn-2"><i
-                    class="fa-solid fa-arrow-right"></i></a>
-              </div>
+            <img src="https://i.imgur.com/2STNFPm.png" alt="ezlink-red">
+            <div class="card-content">
+              <h3>EZ-Link Card Redesign</h3>
+              <a href="worksbynrfz/ezlink-red.html" class="pw-btn-small btn-2"><i
+                  class="fa-solid fa-arrow-right"></i></a>
             </div>
+          </div>
 
 
           <div class="card mc" data-date="2020-01-01">
-              <img src="https://i.imgur.com/rW2romm.png" alt="frc-flash-app">
-              <div class="card-content">
-                <h3>Food Review Compiler/Flashify - a Flashcard App</h3>
-                <a href="worksbynrfz/food-rev-flash-app.html" class="pw-btn-small btn-2"><i
-                    class="fa-solid fa-arrow-right"></i></a>
-              </div>
+            <img src="https://i.imgur.com/rW2romm.png" alt="frc-flash-app">
+            <div class="card-content">
+              <h3>Food Review Compiler/Flashify - a Flashcard App</h3>
+              <a href="worksbynrfz/food-rev-flash-app.html" class="pw-btn-small btn-2"><i
+                  class="fa-solid fa-arrow-right"></i></a>
             </div>
-   
+          </div>
+
 
           <div class="card lg" data-date="2017-01-01">
-              <img src="https://i.imgur.com/ian4hrp.png" alt="friends-forever">
-              <div class="card-content">
-                <h3>Friends Forever Logo Design</h3>
-                <a href="worksbynrfz/ffl.html" class="pw-btn-small btn-2"><i
-                    class="fa-solid fa-arrow-right"></i></a>
-              </div>
+            <img src="https://i.imgur.com/ian4hrp.png" alt="friends-forever">
+            <div class="card-content">
+              <h3>Friends Forever Logo Design</h3>
+              <a href="worksbynrfz/ffl.html" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
             </div>
-       
+          </div>
+
 
           <div class="card ig" data-date="2020-01-01">
-              <img src="https://i.imgur.com/AsrVHVA.png" alt="infographic-resume">
-              <div class="card-content">
-                <h3>Infographic Resume</h3>
-                <a href="worksbynrfz/igra1.html" class="pw-btn-small btn-2"><i
-                    class="fa-solid fa-arrow-right"></i></a>
-              </div>
+            <img src="https://i.imgur.com/AsrVHVA.png" alt="infographic-resume">
+            <div class="card-content">
+              <h3>Infographic Resume</h3>
+              <a href="worksbynrfz/igra1.html" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
             </div>
-        
+          </div>
+
 
           <div class="card ig" data-date="2021-01-01">
-              <img src="https://i.imgur.com/FtHn22x.png" alt="hydration-reg">
-              <div class="card-content">
-                <h3>COVID-19 Shopping Habits Infographic</h3>
-                <a href="worksbynrfz/igra2.html" class="pw-btn-small btn-2"><i
-                    class="fa-solid fa-arrow-right"></i></a>
-              </div>
+            <img src="https://i.imgur.com/FtHn22x.png" alt="hydration-reg">
+            <div class="card-content">
+              <h3>COVID-19 Shopping Habits Infographic</h3>
+              <a href="worksbynrfz/igra2.html" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
             </div>
+          </div>
         </div>
       </div>
     </div>
