--- a/worksbynrfz/buszy.html
+++ b/worksbynrfz/buszy.html
@@ -190,7 +190,7 @@
               </ol>
             </nav>
             <div class="page-title-wrapper">
-              <h1 class="page-title-single">Bus Arrival Timings</h1>
+              <h1 class="page-title-single">Buszy - Bus Arrival Timings</h1>
             </div>
           </div>
         </div>
@@ -206,7 +206,7 @@
 
           <ul>
             <li>
-              <a href="https://nurafianzulkifli.com/buszy"><i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp;
+              <a href="https://worksbynrfz.com/buszy"><i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp;
                 View Website</a>
             </li>
           </ul>
