--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -38,7 +38,7 @@
 
 <style>
   #cv-tdc {
-    background-image: url('https://i.imgur.com/ffwxhba.png');
+    background-image: url('https://i.imgur.com/Celb2DC.png');
     height: 75vh;
   }
 </style>
@@ -190,7 +190,7 @@
               </ol>
             </nav>
             <div class="page-title-wrapper">
-              <h1 class="page-title-single">Train Delays Tracker</h1>
+              <h1 class="page-title-single">RailBuddy - Stay on track, always</h1>
             </div>
           </div>
         </div>
@@ -206,8 +206,8 @@
 
           <ul>
             <li>
-              <a href="https://nurafianzulkifli.github.io/train-delays-checker/"><i
-                  class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp; View Website</a>
+              <a href="https://worksbynrfz.com/rail-buddy"><i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp;
+                View Website</a>
             </li>
           </ul>
 
@@ -254,7 +254,7 @@
                       <i class="fa-solid fa-calendar"></i>
                     </div>
                     <h3 style="font-size: 18px; font-weight: bolder;">Project Year</h3>
-                    <h4 style="font-size: 13px;">2025 (Version 5)</h4>
+                    <h4 style="font-size: 13px;">2026 (Version 4)</h4>
                   </div>
                 </div>
 
@@ -268,7 +268,7 @@
                       <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/delays-checker.html"
                         title="Facebook">
                         <i class="fa-brands fa-facebook"></i> </a>
-                      <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/delays-checker.html&text= Train Delays Checker"
+                      <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/delays-checker.html&text= RailBuddy - Stay on track, always"
                         title="X (Twitter)">
                         <i class="fa-brands fa-x-twitter"></i></a>
                       <a href="#" class="clipboard" onclick="copyToClipboard(this)" title="Copy Link">
@@ -285,13 +285,8 @@
             <div class="row justify-content-center">
               <div class="col-lg-12">
                 <div class="info justify-content-center">
-                  <p style="text-align: justify;">A pet-project of mine. Created just to keep
-                    track of
-                    train delays and breakdowns. The current features only included an Overview of Days Since Last
-                    Reported
-                    Failure, the Delays Overview, as well as Recent Incidents (i.e. Incidents History). I do wish to
-                    make this
-                    into a real-time website one day.</p>
+                  <p style="text-align: justify;">A pet-project of mine. Created to keep track of rail delays. The new
+                    version includes real-time updates, improved user interface, and the inclusion of First/Last Train Timings.</p>
                 </div>
               </div>
             </div>
@@ -306,18 +301,18 @@
   <div class="wrapper">
     <div class="carousel" id="delays-carousel">
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/hmYKkAS.png" class="portfolio-img" data-gallery="carousel" id="tdt1">
-          <img class="img-fluid" src="https://i.imgur.com/hmYKkAS.png" alt="tdt1-img" draggable="false" id="tdt1-img">
+        <a href="https://i.imgur.com/XfVuuA7.png" class="portfolio-img" data-gallery="carousel" id="tdt1">
+          <img class="img-fluid" src="https://i.imgur.com/XfVuuA7.png" alt="tdt1-img" draggable="false" id="tdt1-img">
         </a>
       </div>
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/HVLfvR0.png" class="portfolio-img" data-gallery="carousel" id="tdt2">
-          <img class="img-fluid" src="https://i.imgur.com/HVLfvR0.png" alt="tdt2-img" draggable="false" id="tdt2-img">
+        <a href="https://i.imgur.com/AhkkGcD.png" class="portfolio-img" data-gallery="carousel" id="tdt2">
+          <img class="img-fluid" src="https://i.imgur.com/AhkkGcD.png" alt="tdt2-img" draggable="false" id="tdt2-img">
         </a>
       </div>
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/8pfBM4C.png" class="portfolio-img" data-gallery="carousel" id="tdt3">
-          <img class="img-fluid" src="https://i.imgur.com/8pfBM4C.png" alt="tdt3-img" draggable="false" id="tdt3-img">
+        <a href="https://i.imgur.com/v88e091.png" class="portfolio-img" data-gallery="carousel" id="tdt3">
+          <img class="img-fluid" src="https://i.imgur.com/v88e091.png" alt="tdt3-img" draggable="false" id="tdt3-img">
         </a>
       </div>
     </div>
@@ -471,30 +466,30 @@
 
       if (isDarkMode) {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/ffwxhba.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/Celb2DC.png')";
 
-        tdt1_link.href = 'https://i.imgur.com/X8jzLkz.png';
-        tdt1_img.src = 'https://i.imgur.com/X8jzLkz.png';
+        tdt1_link.href = 'https://i.imgur.com/4QOpHhM.png';
+        tdt1_img.src = 'https://i.imgur.com/4QOpHhM.png';
 
-        tdt2_link.href = 'https://i.imgur.com/wB1HaLg.png';
-        tdt2_img.src = 'https://i.imgur.com/wB1HaLg.png';
+        tdt2_link.href = 'https://i.imgur.com/YyEtscd.png';
+        tdt2_img.src = 'https://i.imgur.com/YyEtscd.png';
 
-        tdt3_link.href = 'https://i.imgur.com/ypd3eta.png';
-        tdt3_img.src = 'https://i.imgur.com/ypd3eta.png';
+        tdt3_link.href = 'https://i.imgur.com/3XOvgi4.png';
+        tdt3_img.src = 'https://i.imgur.com/3XOvgi4.png';
 
 
       } else {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/ffwxhba.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/Celb2DC.png')";
 
-        tdt1_link.href = 'https://i.imgur.com/hmYKkAS.png';
-        tdt1_img.src = 'https://i.imgur.com/hmYKkAS.png';
+        tdt1_link.href = 'https://i.imgur.com/XfVuuA7.png';
+        tdt1_img.src = 'https://i.imgur.com/XfVuuA7.png';
 
-        tdt2_link.href = 'https://i.imgur.com/HVLfvR0.png';
-        tdt2_img.src = 'https://i.imgur.com/HVLfvR0.png';
+        tdt2_link.href = 'https://i.imgur.com/AhkkGcD.png';
+        tdt2_img.src = 'https://i.imgur.com/AhkkGcD.png';
 
-        tdt3_link.href = 'https://i.imgur.com/8pfBM4C.png';
-        tdt3_img.src = 'https://i.imgur.com/8pfBM4C.png';
+        tdt3_link.href = 'https://i.imgur.com/v88e091.png';
+        tdt3_img.src = 'https://i.imgur.com/v88e091.png';
 
       }
     }
